--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,12 +1,10 @@
 .footer{
-    position: absolute;
-    bottom: 0;
-    left: 0;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
     width: 100%;
     padding: 0.5rem;
+    margin-top: 2rem;
 }   
 
 a{
