--- a/src/components/Preview/Styles/Preview.css
+++ b/src/components/Preview/Styles/Preview.css
@@ -2,6 +2,13 @@
     border: 1px solid;
     height: 100%;
     width: 40vw;
-    padding: 0;
+    padding: 2rem;
     margin: 0;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+}
+
+
+.edu-work-header{
+    margin-top: 4rem;
 }
